--- a/index.html
+++ b/index.html
@@ -354,22 +354,118 @@
                         <i class="fa fa-search"></i>
                     </div>
                     <div class="col-10">
-                        <h6>Быстрый поиск ЗИП</h6>
+                        <h6>Горячий поиск ЗИП</h6>
                         <p>Отправьте запрос на поиск нужной запчасти сервис-партнерам ProdaiZIP по всей России</p>
                     </div>
                 </div>
             </div>
         </div>
-<!--Баннеры -->
+<!--Блок Горячие запросы -->
         <div class="row">
-            <div class="col-12" style="padding-top: 30px;">
-                <p>
-                    Баннер или еще что то
-                </p>
+            <div class="col-12 fastSearch" style="padding-top: 30px;">
+                <h5>Горячие запросы</h5>
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>Раздел</th>
+                        <th>Запрос</th>
+                        <th>Город</th>
+                        <th>Цена</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody class="table-hover">
+                    <tr>
+                        <td><i class="fa fa-print"></i></td>
+                        <td>Срочно! Куплю плату форматтера HP M1132</td>
+                        <td>Новосибирск</td>
+                        <td>1500 ₽</td>
+                        <td><button class="btn btn-success">Предложить</button></td>
+                    </tr>
+                    <tr>
+                        <td><i class="fa fa-print"></i></td>
+                        <td>Линейка сканера на Samsung SCX-4300</td>
+                        <td>Хабаровск</td>
+                        <td>500 ₽</td>
+                        <td><button class="btn btn-success">Предложить</button></td>
+                    </tr>
+                    <tr>
+                        <td><i class="fa fa-print"></i></td>
+                        <td>Плата питания на Pantum P2000</td>
+                        <td>Москва</td>
+                        <td>1000 ₽</td>
+                        <td><button class="btn btn-success">Предложить</button></td>
+                    </tr>
+                    <tr>
+                        <td><i class="fa fa-phone"></i></td>
+                        <td>Корпус черный на Samsung A20</td>
+                        <td>Хабаровск</td>
+                        <td>500 ₽</td>
+                        <td><button class="btn btn-success">Предложить</button></td>
+                    </tr>
+                    <tr>
+                        <td><i class="fa fa-tv"></i></td>
+                        <td>Экран (матрица) телевизора LG Flatron A5320</td>
+                        <td>Хабаровск</td>
+                        <td>500 ₽</td>
+                        <td><button class="btn btn-success">Предложить</button></td>
+                    </tr>
+                    <tr>
+                        <td colspan="5">Смотреть все запросы ></td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
-<!--Второй слайд -->
+<!--Подвал сайта-->
+    <div class="container-fluid podval">
+        <div class="row justify-content-around">
+            <div class="col-12 text-center priziv">
+                <h2>Начните зарабатывать сейчас</h2>
+                <button class="btn btn-warning">Зарегистрироваться</button>
+                <button class="btn btn-danger">Подать объявление</button>
+            </div>
+            <div col-2>
+                <h5><i class="fa fa-tv"></i> Информация</h5>
+                <p>Первый пунтк</p>
+                <p>Второй пунтк</p>
+                <p>Третий пунтк</p>
+                <p>Четвертый пунтк</p>
+                <p>Пятый пунтк</p>
+            </div>
+            <div col-2>
+                <h5><i class="fa fa-tv"></i> Услуги</h5>
+                <p>Подать объявление</p>
+                <p>Второй пунтк</p>
+                <p>Третий пунтк</p>
+                <p>Четвертый пунтк</p>
+                <p>Пятый пунтк</p>
+            </div>
+            <div col-2>
+                <h5><i class="fa fa-tv"></i> Служба поддержки</h5>
+                <p>Первый пунтк</p>
+                <p>Второй пунтк</p>
+                <p>Третий пунтк</p>
+                <p>Четвертый пунтк</p>
+                <p>Пятый пунтк</p>
+            </div>
+            <div col-2>
+                <h5><i class="fa fa-tv"></i> Информация</h5>
+                <p>Первый пунтк</p>
+                <p>Второй пунтк</p>
+                <p>Третий пунтк</p>
+                <p>Четвертый пунтк</p>
+                <p>Пятый пунтк</p>
+            </div>
+            <div class="col-12">
+                <hr>
+                <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
+            </div>
+        </div>
+    </div>
+
+
 
 
 </body>
