--- a/index.html
+++ b/index.html
@@ -426,47 +426,41 @@
                 <button class="btn btn-warning">Зарегистрироваться</button>
                 <button class="btn btn-danger">Подать объявление</button>
             </div>
-            <div col-2>
-                <h5><i class="fa fa-tv"></i> Информация</h5>
-                <p>Первый пунтк</p>
-                <p>Второй пунтк</p>
-                <p>Третий пунтк</p>
-                <p>Четвертый пунтк</p>
-                <p>Пятый пунтк</p>
-            </div>
-            <div col-2>
-                <h5><i class="fa fa-tv"></i> Услуги</h5>
+            <div class="col-2">
+                <h5><i class="fa fa-list"></i>Услуги</h5>
                 <p>Подать объявление</p>
-                <p>Второй пунтк</p>
-                <p>Третий пунтк</p>
-                <p>Четвертый пунтк</p>
-                <p>Пятый пунтк</p>
+                <p>Горящий запрос</p>
+                <p>Безопасная сделка</p>
+                <p>Размещение рекламы</p>
             </div>
-            <div col-2>
-                <h5><i class="fa fa-tv"></i> Служба поддержки</h5>
-                <p>Первый пунтк</p>
-                <p>Второй пунтк</p>
-                <p>Третий пунтк</p>
-                <p>Четвертый пунтк</p>
-                <p>Пятый пунтк</p>
+            <div class="col-2">
+                <h5><i class="fa fa-cogs"></i>Служба поддержки</h5>
+                <p>Обратная связь</p>
+                <p>Сотрудничество</p>
+                <p>Жалоба на объявление</p>
             </div>
-            <div col-2>
-                <h5><i class="fa fa-tv"></i> Информация</h5>
-                <p>Первый пунтк</p>
-                <p>Второй пунтк</p>
-                <p>Третий пунтк</p>
-                <p>Четвертый пунтк</p>
-                <p>Пятый пунтк</p>
+            <div class="col-2">
+                <h5><i class="fa fa-info"></i>Информация</h5>
+                <p>О компании</p>
+                <p>Политика безопасности</p>
+                <p>Условия и соглашения</p>
+            </div>
+            <div class="col-2">
+                <h5><i class="fa fa-id-card"></i>Личный кабинет</h5>
+                <p>Мои объявления</p>
+                <p>Мои запросы</p>
+                <p>Мои сообщения</p>
+                <p>Избранное</p>
+                <p>Кошелек</p>
+                <p>Профиль</p>
             </div>
             <div class="col-12">
                 <hr>
                 <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
+                <h6>Все права защищены. ProdaiZIP©</h6>
             </div>
         </div>
     </div>
-
-
-
 
 </body>
 </html>
