--- a/index.html
+++ b/index.html
@@ -21,50 +21,50 @@
     <title>Доска объявлений №1 по продаже оргтехники</title>
 </head>
 <body>
-    <!--Меню для маленьких экранов-->
-    <nav class="navbar d-md-none navbar-expand-md bg-dark navbar-dark sticky-top">
-        <div class="container-fluid">
-            <a href="#" class="navbar-brand">prodaiZIP.ru</a>
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse" id="search">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Поиск</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Поиск по категории</a>
-                </li>
-            </ul>
-        </div>
-        <div class="collapse navbar-collapse" id="menu">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Услуги</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Турбо</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Отзывы</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Цены</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Контакты</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<!--Меню для маленьких экранов-->
+<nav class="navbar d-md-none navbar-expand-md bg-dark navbar-dark sticky-top">
+    <div class="container-fluid">
+        <a href="#" class="navbar-brand">prodaiZIP.ru</a>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+    <div class="collapse navbar-collapse" id="search">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Поиск</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Поиск по категории</a>
+            </li>
+        </ul>
+    </div>
+    <div class="collapse navbar-collapse" id="menu">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Главная</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Услуги</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Турбо</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Отзывы</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Цены</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Контакты</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
     <!--Основной контент сайта-->
     <div class="container">
@@ -178,9 +178,9 @@
             </div>
         </form>
 <!--Блок категорий-->
-        <div class="row justify-content-around" style="margin-top: 30px;">
-            <div class="col-md-1 categoryMain categoryMainPrint">
-                <div class="row">
+        <div class="row justify-content-around">
+            <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainPrint">
+                <div class="row text-center">
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
@@ -194,8 +194,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain categoryMainPhone">
-                <div class="row">
+            <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainPhone">
+                <div class="row text-center">
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
@@ -209,8 +209,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain categoryMainTab">
-                <div class="row">
+            <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainTab">
+                <div class="row text-center">
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
@@ -224,8 +224,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain categoryMainNotebook">
-                <div class="row">
+            <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainNotebook">
+                <div class="row text-center">
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
@@ -239,8 +239,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain categoryMainTV">
-                <div class="row">
+            <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainTV">
+                <div class="row text-center">
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
@@ -254,8 +254,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain categoryMainPC">
-                <div class="row">
+            <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainPC">
+                <div class="row text-center">
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
@@ -269,8 +269,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain categoryMainRashodka">
-                <div class="row">
+            <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainRashodka">
+                <div class="row text-center">
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
@@ -284,8 +284,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain categoryMainOther">
-                <div class="row">
+            <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainOther">
+                <div class="row text-center">
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
@@ -300,7 +300,9 @@
                 </div>
             </div>
         </div>
-<!--Баннер-->
+    </div>
+<!--Блок объявлений и сервисов-->
+    <div class="container">
         <div class="row" style="margin-top: 30px;">
             <div class="col-9 goodsMain">
                 <h5>Последние объявления</h5>
@@ -360,7 +362,7 @@
                 </div>
             </div>
         </div>
-<!--Блок Горячие запросы -->
+        <!--Блок Горячие запросы -->
         <div class="row">
             <div class="col-12 fastSearch" style="padding-top: 30px;">
                 <h5>Горячие запросы</h5>
@@ -418,6 +420,7 @@
             </div>
         </div>
     </div>
+
 <!--Подвал сайта-->
     <div class="container-fluid podval">
         <div class="row justify-content-around">
