--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- Подключаем иконочный шрифт FontAwesome 4-ой версии. -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
 
-    <script src="js/main.js"></script>
+    <!-- Корректировка стиля. -->
     <link rel="stylesheet" href="css/main.css">
-    <!--Подключаем иконочный шрифт-->
-    <link rel="stylesheet" href="css/all.css">
 
     <title>Доска объявлений №1 по продаже оргтехники</title>
 </head>
@@ -304,7 +297,7 @@
 <!--Блок объявлений и сервисов-->
     <div class="container">
         <div class="row" style="margin-top: 30px;">
-            <div class="col-9 goodsMain">
+            <div class="col-12 col-lg-9 goodsMain">
                 <h5>Последние объявления</h5>
                 <div class="row align-items-end">
                     <div class="col-4">
@@ -342,7 +335,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3 serviceProdaiZIP">
+            <div class="col-12 col-lg-3 serviceProdaiZIP">
                 <h5>Сервисы ProdaiZIP</h5>
                 <div class="row">
                     <div class="col-2">
@@ -366,7 +359,7 @@
         <div class="row">
             <div class="col-12 fastSearch" style="padding-top: 30px;">
                 <h5>Горячие запросы</h5>
-                <table class="table table-hover">
+                <table class="table table-responsive-sm table-hover">
                     <thead>
                     <tr>
                         <th>Раздел</th>
@@ -429,26 +422,26 @@
                 <button class="btn btn-warning">Зарегистрироваться</button>
                 <button class="btn btn-danger">Подать объявление</button>
             </div>
-            <div class="col-2">
+            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
                 <h5><i class="fa fa-list"></i>Услуги</h5>
                 <p>Подать объявление</p>
                 <p>Горящий запрос</p>
                 <p>Безопасная сделка</p>
                 <p>Размещение рекламы</p>
             </div>
-            <div class="col-2">
+            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
                 <h5><i class="fa fa-cogs"></i>Служба поддержки</h5>
                 <p>Обратная связь</p>
                 <p>Сотрудничество</p>
                 <p>Жалоба на объявление</p>
             </div>
-            <div class="col-2">
+            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
                 <h5><i class="fa fa-info"></i>Информация</h5>
                 <p>О компании</p>
                 <p>Политика безопасности</p>
                 <p>Условия и соглашения</p>
             </div>
-            <div class="col-2">
+            <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
                 <h5><i class="fa fa-id-card"></i>Личный кабинет</h5>
                 <p>Мои объявления</p>
                 <p>Мои запросы</p>
@@ -464,6 +457,11 @@
             </div>
         </div>
     </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
