--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <div class="col-12 col-lg-9 goodsMain">
                 <h5>Последние объявления</h5>
                 <div class="row align-items-end">
-                    <div class="col-4">
+                    <div class="col-6 col-sm-4">
                         <figure>
                             <img src="img/print_str.jpg">
                             <figcaption>
@@ -311,7 +311,7 @@
                             </figcaption>
                         </figure>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-sm-4">
                         <figure>
                             <img src="img/noutebook.jpg">
                             <figcaption>
@@ -322,7 +322,7 @@
                             </figcaption>
                         </figure>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-sm-4">
                         <figure>
                             <img src="img/printer_2.jpg">
                             <figcaption>
@@ -339,7 +339,7 @@
                 <h5>Сервисы ProdaiZIP</h5>
                 <div class="row">
                     <div class="col-2">
-                        <i class="fa fa-shield-alt"></i>
+                        <i class="fa fa-shield"></i>
                     </div>
                     <div class="col-10">
                         <h6>Безопасная сделка</h6>
