--- a/index.html
+++ b/index.html
@@ -15,53 +15,82 @@
 </head>
 <body>
 <!--Меню для маленьких экранов-->
-<nav class="navbar d-md-none navbar-expand-md bg-dark navbar-dark sticky-top">
+<nav class="navbar d-md-none navbar-expand-md navbar-dark sticky-top">
     <div class="container-fluid">
-        <a href="#" class="navbar-brand">prodaiZIP.ru</a>
+        <a href="#" class="navbar-brand">ProdaiZIP.ru</a>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
-            <span class="navbar-toggler-icon"></span>
+            <i class="fa fa-search"></i>
+        </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#profile">
+            <i class="fa fa-user"></i>
         </button>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
-            <span class="navbar-toggler-icon"></span>
+            <i class="fa fa-list"></i>
         </button>
     </div>
     <div class="collapse navbar-collapse" id="search">
         <ul class="navbar-nav">
+            <li class="nav-item">
+                <form class="form">
+                    <label for="searchInput">Что вы ищете</label>
+                    <input id="searchInput" class="form-control " type="search" placeholder="Введите слово для поиска">
+                    <label for="searchCategory">Категория</label>
+                    <select class="form-control" id="searchCategory">
+                        <option>Принтеры/копиры</option>
+                        <option>Телефоны</option>
+                        <option>Планшеты</option>
+                        <option>Ноутбуки</option>
+                        <option>Мониторы/телевизоры</option>
+                        <option>Компьютеры/комплектующие</option>
+                        <option>Расходные материалы</option>
+                        <option>Прочее</option>
+                    </select>
+                    <label for="searchCity">Местоположение</label>
+                    <input id="searchCity" class="form-control " type="text" placeholder="Город">
+                    <button class="btn btn-success" type="submit">Поиск</button>
+                    <button class="btn btn-danger" type="submit">Сброс</button>
+                </form>
+            </li>
+        </ul>
+    </div>
+    <div class="collapse navbar-collapse" id="profile">
+        <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Поиск</a>
+                <a class="nav-link" href="#">Войти</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Поиск по категории</a>
+                <a class="nav-link" href="#">Зарегистрироваться</a>
             </li>
         </ul>
     </div>
     <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav">
-            <li class="nav-item active">
+            <div class="menuMobile">
+                <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"> Добавить объявление</i></a>
+                <a class="nav-link btn btn-sm btn-danger" href="#"><i class="fa fa-plus-circle"> Добавить горячий запрос</i></a>
+            </div>
+            <li class="nav-item">
                 <a class="nav-link" href="#">Главная</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Все объявления</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Услуги</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Турбо</a>
+                <a class="nav-link" href="#">Обратная связь</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Отзывы</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Цены</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Контакты</a>
+                <a class="nav-link" href="#">О компании</a>
             </li>
         </ul>
     </div>
 </nav>
 
-    <!--Основной контент сайта-->
+<!--Основной контент сайта-->
     <div class="container">
-        <!--Верхнее меню-->
+<!--Верхнее меню-->
         <div class="row" style="margin-top: 20px;">
             <div class="col-lg-7 col-md-6 d-none d-md-block menus" style="padding: 0;">
                 <img src="img/logo.png" style="height: 100%; width: auto;">
