2805_закончил верстку и адаптацию главной страницы

--- a/index.html
+++ b/index.html
@@ -92,42 +92,42 @@
     <div class="container">
 <!--Верхнее меню-->
         <div class="row blockMenuMain">
-            <div class="col-lg-7 col-md-6 d-none d-md-block menus" style="padding: 0;">
-                <img src="img/logo.png" style="height: 100%; width: auto;">
+            <div class="col-lg-7 col-md-6 d-none d-md-block menus logo">
+                <img src="img/logo.png">
             </div>
             <div class="col-lg-3 col-md-4 d-none d-md-block menus">
-                <div class="row menus" style="height: 100%">
-                    <div class="col-2 offset-2 menus d-flex align-items-center" style="padding: 0;">
+                <div class="row menus" >
+                    <div class="col-2 offset-2 menus d-flex align-items-center iconNotice">
                         <a href="#">
                             <span class="fa-stack fa-1x has-badge" data-count="4">
-                                <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                                <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-bell fa-stack-1x"></i>
                             </span>
                         </a>
                     </div>
-                    <div class="col-2 menus d-flex align-items-center" style="padding: 0; border-right: 1px solid #eee;">
+                    <div class="col-2 menus d-flex align-items-center iconAd">
                         <a href="#">
                             <span class="fa-stack fa-1x has-badge" data-count="2">
-                                <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                                <i class="fa fa-list fa-stack-1x" style="color: dimgray;"></i>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-list fa-stack-1x"></i>
                             </span>
                         </a>
                     </div>
-                    <div class="col-4 menus d-flex align-items-center justify-content-center" style="padding: 0px 0px 0px 5px; margin: 0;">
-                        <button class="btn btn-info" style=" padding: 0px; width: 90%; height: 80%; border-radius: 12px; background: white; color: #0f6674;">Войти</button>
+                    <div class="col-4 menus d-flex align-items-center justify-content-center loginMenu">
+                        <button class="btn btn-info">Войти</button>
                     </div>
-                    <div class="col-2 menus d-flex align-items-center justify-content-center" style="padding: 0;">
+                    <div class="col-2 menus d-flex align-items-center justify-content-center profileMenu">
                         <a href="profile.html">
-                            <img src="img/profile-default_v_1.png" style="width: 90%; height: 90%;">
+                            <img src="img/profile-default_v_1.png">
                         </a>
                      </div>
                  </div>
              </div>
-             <div class="col-sm-2 d-none d-xl-flex align-items-center menus" style="padding: 0;">
-                 <button class="btn btn-danger" style="height: 90%; width: 100%; margin: 0; padding: 0;">Подать объявление</button>
+             <div class="col-sm-2 d-none d-xl-flex align-items-center menus btnLoginMenu1">
+                 <button class="btn btn-danger">Подать объявление</button>
              </div>
-             <div class="col-sm-2 d-none d-md-flex align-items-center d-xl-none menus" style="padding: 0">
-                 <button class="btn btn-danger align-items-center justify-content-center d-flex" style="height: 100%; width: 100%; margin: 0; padding: 0;">Добавить</button>
+             <div class="col-sm-2 d-none d-md-flex align-items-center d-xl-none menus btnLoginMenu2">
+                 <button class="btn btn-danger align-items-center justify-content-center d-flex">Добавить</button>
              </div>
          </div>
 <!--Блок поиска-->
