--- a/index.html
+++ b/index.html
@@ -200,11 +200,14 @@
             </div>
         </form>
 <!--Блок категорий-->
+        <div id="myModal" class="modal fade">
+            <!--...-->
+        </div>
         <div class="row justify-content-around">
             <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainPrint">
                 <div class="row text-center">
                     <div class="col-12">
-                        <a href="#">
+                        <a href="#myModal" data-toggle="modal">
                             <span class="fa-stack">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-print fa-stack-1x"></i>
@@ -212,7 +215,7 @@
                         </a>
                     </div>
                     <div class="col-12 categoryMainCaption">
-                        <a href="#">Принтеры / копиры</a>
+                        <a href="#myModal" data-toggle="modal">Принтеры / копиры</a>
                     </div>
                 </div>
             </div>
@@ -435,7 +438,7 @@
                         <td><button class="btn btn-success">Предложить</button></td>
                     </tr>
                     <tr>
-                        <td colspan="5">Смотреть все запросы ></td>
+                        <td colspan="5"><a href="#">Смотреть все запросы ></a></td>
                     </tr>
                     </tbody>
                 </table>
@@ -453,33 +456,33 @@
             </div>
             <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
                 <h5><i class="fa fa-list"></i>Услуги</h5>
-                <p>Подать объявление</p>
-                <p>Горящий запрос</p>
-                <p>Безопасная сделка</p>
-                <p>Размещение рекламы</p>
+                <p><a href="#">Подать объявление</a></p>
+                <p><a href="#">Горящий запрос</a></p>
+                <p><a href="#">Безопасная сделка</a></p>
+                <p><a href="#">Размещение рекламы</a></p>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
                 <h5><i class="fa fa-cogs"></i>Служба поддержки</h5>
-                <p>Обратная связь</p>
-                <p>Сотрудничество</p>
-                <p>Жалоба на объявление</p>
+                <p><a href="#">Обратная связь</a></p>
+                <p><a href="#">Сотрудничество</a></p>
+                <p><a href="#">Жалоба на объявление</a></p>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
                 <h5><i class="fa fa-info"></i>Информация</h5>
-                <p>О компании</p>
-                <p>Политика безопасности</p>
-                <p>Условия и соглашения</p>
+                <p><a href="#">О компании</a></p>
+                <p><a href="#">Политика безопасности</a></p>
+                <p><a href="#">Условия и соглашения</a></p>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
                 <h5><i class="fa fa-id-card"></i>Личный кабинет</h5>
-                <p>Мои объявления</p>
-                <p>Мои запросы</p>
-                <p>Мои сообщения</p>
-                <p>Избранное</p>
-                <p>Кошелек</p>
-                <p>Профиль</p>
+                <p><a href="#">Мои объявления</a></p>
+                <p><a href="#">Мои запросы</a></p>
+                <p><a href="#">Мои сообщения</a></p>
+                <p><a href="#">Избранное</a></p>
+                <p><a href="#">Кошелек</a></p>
+                <p><a href="#">Профиль</a></p>
             </div>
-            <div class="col-12">
+            <div class="col-12 podvalCopyright">
                 <hr>
                 <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
                 <h6>Все права защищены. ProdaiZIP©</h6>
