--- a/index.html
+++ b/index.html
@@ -200,14 +200,11 @@
             </div>
         </form>
 <!--Блок категорий-->
-        <div id="myModal" class="modal fade">
-            <!--...-->
-        </div>
         <div class="row justify-content-around">
             <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainPrint">
                 <div class="row text-center">
                     <div class="col-12">
-                        <a href="#myModal" data-toggle="modal">
+                        <a href="#printerCopir" data-toggle="modal">
                             <span class="fa-stack">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-print fa-stack-1x"></i>
@@ -215,7 +212,7 @@
                         </a>
                     </div>
                     <div class="col-12 categoryMainCaption">
-                        <a href="#myModal" data-toggle="modal">Принтеры / копиры</a>
+                        <a href="#printerCopir" data-toggle="modal">Принтеры / копиры</a>
                     </div>
                 </div>
             </div>
@@ -322,6 +319,19 @@
                     <div class="col-12 categoryMainCaption">
                         <a href="#">Прочее</a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!--Модальные окна для категорий-->
+    <div id="printerCopir" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    Header
+                </div>
+                <div class="modal-body">
+                    Body
                 </div>
             </div>
         </div>
