Делаю модальное окно с категориями

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -13,10 +13,10 @@
             crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-    <script src="js/main.js"></script>
-    <link rel="stylesheet" href="css/main.css">
+    <script src="../js/main.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
     <!--Подключаем иконочный шрифт-->
-    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="../css/all.css">
 
     <title>Личный кабинет</title>
 </head>
@@ -61,7 +61,7 @@
                 <a class="btn btn-info nav-link" href="#">Войти</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="profile.html"><img src="img/profile-default_v_1.png"></a>
+                <a class="nav-link" href="profile.html"><img src="../img/profile-default_v_1.png"></a>
             </li>
             <li class="nav-item" style="height: 100%;">
                 <a class="btn btn-danger nav-link" href="#">Добавить объявление</a>
