--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav">
             <div class="menuMobile">
-                <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"> Добавить объявление</i></a>
-                <a class="nav-link btn btn-sm btn-danger" href="#"><i class="fa fa-plus-circle"> Добавить горячий запрос</i></a>
+                <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"></i> Добавить объявление</a>
+                <a class="nav-link btn btn-sm btn-danger" href="#"><i class="fa fa-plus-circle"></i> Добавить горячий запрос</a>
             </div>
             <li class="nav-item">
                 <a class="nav-link" href="#">Главная</a>
@@ -117,7 +117,7 @@
                         <button class="btn btn-info">Войти</button>
                     </div>
                     <div class="col-2 menus d-flex align-items-center justify-content-center profileMenu">
-                        <a href="profile.html">
+                        <a href="pages/profile.html">
                             <img src="img/profile-default_v_1.png">
                         </a>
                      </div>
@@ -219,7 +219,7 @@
             <div class="col-6 col-sm-3 col-md-1 categoryMain categoryMainPhone">
                 <div class="row text-center">
                     <div class="col-12">
-                        <a href="#">
+                        <a href="#mobilePhone" data-toggle="modal">
                             <span class="fa-stack">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-phone fa-stack-1x"></i>
@@ -227,7 +227,7 @@
                         </a>
                     </div>
                     <div class="col-12 categoryMainCaption">
-                        <a href="#">Телефоны</a>
+                        <a href="#mobilePhone" data-toggle="modal">Телефоны</a>
                     </div>
                 </div>
             </div>
@@ -322,20 +322,83 @@
                 </div>
             </div>
         </div>
-    </div>
-<!--Модальные окна для категорий-->
-    <div id="printerCopir" class="modal fade">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    Header
-                </div>
-                <div class="modal-body">
-                    Body
+        <!--Модальные окна для категорий-->
+        <div id="printerCopir" class="modal fade">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-4">Категория / категория</div>
+                                <div class="col-4">Добавить объявление</div>
+                                <div class="col-4">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12 col-lg-6"><a href="#" class="btn btn-primary btn-icon"><span class="icon"><i class="fa fa-print"></i></span>Продажа принтеров / копиров</a></div>
+                                <div class="col-12 col-lg-6"><a href="#" class="btn btn-primary btn-icon"><span class="icon"><i class="fa fa-print"></i></span>Принтеры / копиры на запчасти</a></div>
+                                <div class="col-12 col-lg-6"><a href="#" class="btn btn-primary btn-icon"><span class="icon"><i class="fa fa-print"></i></span>Запчасти для принтеров / копиров</a></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <div id="mobilePhone" class="modal fade">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-4">Категория / категория</div>
+                                <div class="col-4">Добавить объявление</div>
+                                <div class="col-4">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12">
+                                    <a href="#">
+                                        <span class="categoryDetailMain">
+                                            <span class="icon"><i class="fa fa-phone"></i></span>
+                                            <span>Продажа телефонов</span>
+                                        </span>
+                                    </a>
+                                    <a href="#">
+                                        <span class="categoryDetailMain">
+                                            <span class="icon"><i class="fa fa-phone"></i></span>
+                                            <span>Телефоны на запчасти</span>
+                                        </span>
+                                    </a>
+                                    <a href="#">
+                                        <span class="categoryDetailMain">
+                                            <span class="icon"><i class="fa fa-phone"></i></span>
+                                            <span>Запчасти для телефонов</span>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!---->
     </div>
+
 <!--Блок объявлений и сервисов-->
     <div class="container">
         <div class="row">
