--- a/index.html
+++ b/index.html
@@ -357,13 +357,21 @@
                     <div class="modal-header">
                         <div class="container">
                             <div class="row">
-                                <div class="col-4">Категория / категория</div>
-                                <div class="col-4">Добавить объявление</div>
-                                <div class="col-4">
+                                <div class="col-3">
+                                    Категория / категория
+                                </div>
+                                <div class="col-3">
+                                    <a class="btn btn-success" href="#"><i class="fa fa-plus-circle"></i><span>объявление</span></a>
+                                </div>
+                                <div class="col-3">
+                                    Добавить объявление
+                                </div>
+                                <div class="col-3">
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
+
                             </div>
                         </div>
                     </div>
