Сделал центрирование модального окна

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             </div>
         </div>
         <div id="mobilePhone" class="modal fade">
-            <div class="modal-dialog modal-lg">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
                         <div class="container">
