В модальном окне категорий перенес кнопки в футер

--- a/index.html
+++ b/index.html
@@ -355,25 +355,10 @@
             <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-3">
-                                    Категория / категория
-                                </div>
-                                <div class="col-3">
-                                    <a class="btn btn-success" href="#"><i class="fa fa-plus-circle"></i><span>объявление</span></a>
-                                </div>
-                                <div class="col-3">
-                                    Добавить объявление
-                                </div>
-                                <div class="col-3">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-
-                            </div>
-                        </div>
+                        <span>Принтеры / копиры</span>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
                     <div class="modal-body">
                         <div class="container">
@@ -400,6 +385,10 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="modal-footer">
+                        <a class="btn btn-success" href="#"><i class="fa fa-plus-circle"></i><span>объявление</span></a>
+                        <a class="btn btn-danger" href="#"><i class="fa fa-plus-circle"></i><span>запрос</span></a>
                     </div>
                 </div>
             </div>
