Добавил пару страниц, переделываю верхнее меню

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <!--Верхнее меню-->
         <div class="row blockMenuMain">
             <div class="col-lg-7 col-md-6 d-none d-md-block menus logo">
-                <img src="img/logo.png">
+                <a href="#"><img src="img/logo.png"></a>
             </div>
             <div class="col-lg-3 col-md-4 d-none d-md-block menus">
                 <div class="row menus" >
@@ -287,7 +287,7 @@
                         </a>
                     </div>
                     <div class="col-12 categoryMainCaption">
-                        <a href="#PC" data-toggle="modal">Компьютеры / Комплектующие</a>
+                        <a href="#PC" data-toggle="modal">Компьютеры</a>
                     </div>
                 </div>
             </div>
@@ -336,7 +336,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-12">
-                                    <a href="#">
+                                    <a href="pages/category.html">
                                         <span class="categoryDetailMain">
                                             <span class="icon"><i class="fa fa-print"></i></span>
                                             <span>Продажа принтеров</span>
