--- a/pages/category.html
+++ b/pages/category.html
@@ -1,33 +1,305 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- Подключаем иконочный шрифт FontAwesome 4-ой версии. -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
+
+    <!-- Корректировка стиля. -->
+    <link rel="stylesheet" href="../css/main.css">
+
+    <title>Доска объявлений №1 по продаже оргтехники</title>
 </head>
 <body>
-<div>
-    <img src="" alt="">
-    <table>
-        <tr>
-            <td></td>
-        </tr>
-    </table>
-    <div class="container">
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-2"></div>
-            <div class="col-2"></div>
+<!--Меню для маленьких экранов-->
+<nav class="navbar d-md-none navbar-expand-md navbar-dark sticky-top">
+    <div class="container-fluid">
+        <a href="#" class="navbar-brand">ProdaiZIP.ru</a>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
+            <i class="fa fa-search"></i>
+        </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#profile">
+            <i class="fa fa-user"></i>
+        </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
+            <i class="fa fa-list"></i>
+        </button>
+    </div>
+    <div class="collapse navbar-collapse" id="search">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <form class="form">
+                    <label for="searchInput">Что вы ищете</label>
+                    <input id="searchInput" class="form-control " type="search" placeholder="Введите слово для поиска">
+                    <label for="searchCategory">Категория</label>
+                    <select class="form-control" id="searchCategory">
+                        <option>Принтеры/копиры</option>
+                        <option>Телефоны</option>
+                        <option>Планшеты</option>
+                        <option>Ноутбуки</option>
+                        <option>Мониторы/телевизоры</option>
+                        <option>Компьютеры/комплектующие</option>
+                        <option>Расходные материалы</option>
+                        <option>Прочее</option>
+                    </select>
+                    <label for="searchCity">Местоположение</label>
+                    <input id="searchCity" class="form-control " type="text" placeholder="Город">
+                    <button class="btn btn-success" type="submit">Поиск</button>
+                    <button class="btn btn-danger" type="submit">Сброс</button>
+                </form>
+            </li>
+        </ul>
+    </div>
+    <div class="collapse navbar-collapse" id="profile">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Войти</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Зарегистрироваться</a>
+            </li>
+        </ul>
+    </div>
+    <div class="collapse navbar-collapse" id="menu">
+        <ul class="navbar-nav">
+            <div class="menuMobile">
+                <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"></i> Добавить объявление</a>
+                <a class="nav-link btn btn-sm btn-danger" href="#"><i class="fa fa-plus-circle"></i> Добавить горячий запрос</a>
+            </div>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Главная</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Все объявления</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Услуги</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Обратная связь</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">О компании</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!--Основной контент сайта-->
+<div class="container">
+    <!--Верхнее меню-->
+    <div class="row menuTop">
+        <div class="col-12 text-right">
+            <a href="#">
+                <img class="logo2" src="../img/logo.png" alt="ProdaiZip.ru">
+            </a>
+            <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-bell fa-stack-1x"></i>
+                </span>
+            </a>
+            <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-search fa-stack-1x"></i>
+                </span>
+            </a>
+            <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-list fa-stack-1x"></i>
+                </span>
+            </a>
+            <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-comment fa-stack-1x"></i>
+                </span>
+            </a>
+            <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-star fa-stack-1x"></i>
+                </span>
+            </a>
+            <a href="#" class="btn btn-info">
+                Войти
+            </a>
+            <a href="#">
+                <img src="../img/profile-default.png" alt="Профиль">
+            </a>
+            <a href="#" class="btn btn-danger">
+                Подать объявление
+            </a>
         </div>
     </div>
-    <ul>
-        <li>lorem20</li>
-        <li></li>
-        <li></li>
-    </ul>
+<!---->
+    <div class="row blockMenuMain">
+        <div class="col-lg-7 col-md-6 d-none d-md-block menus logo">
+            <a href="#"><img src="../img/logo.png"></a>
+        </div>
+        <div class="col-lg-3 col-md-4 d-none d-md-block menus">
+            <div class="row menus" >
+                <div class="col-2 offset-2 menus d-flex align-items-center iconNotice">
+                    <a href="#">
+                            <span class="fa-stack fa-1x has-badge" data-count="4">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-bell fa-stack-1x"></i>
+                            </span>
+                    </a>
+                </div>
+                <div class="col-2 menus d-flex align-items-center iconAd">
+                    <a href="#">
+                            <span class="fa-stack fa-1x has-badge" data-count="2">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-list fa-stack-1x"></i>
+                            </span>
+                    </a>
+                </div>
+                <div class="col-4 menus d-flex align-items-center justify-content-center loginMenu">
+                    <button class="btn btn-info">Войти</button>
+                </div>
+                <div class="col-2 menus d-flex align-items-center justify-content-center profileMenu">
+                    <a href="profile.html">
+                        <img src="../img/profile-default_v_1.png">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-2 d-none d-xl-flex align-items-center menus btnLoginMenu1">
+            <button class="btn btn-danger">Подать объявление</button>
+        </div>
+        <div class="col-sm-2 d-none d-md-flex align-items-center d-xl-none menus btnLoginMenu2">
+            <button class="btn btn-danger align-items-center justify-content-center d-flex">Добавить</button>
+        </div>
+    </div>
+    <!--Блок поиска-->
+    <form>
+        <div class="row blockSearchMain">
+            <div class="form-row rowSearchMain">
+                <div class="form-group col-md-6">
+                    <label for="inputZapros" class="col-form-label col-form-label-lg">Что вы ищете</label>
+                    <input type="text" class="form-control form-control-lg" id="inputZapros" placeholder="Плата форматера для HP P1005">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="selectCategory" class="col-form-label col-form-label-lg">Категория</label>
+                    <select class="form-control form-control-lg" id="selectCategory">
+                        <option>Принтеры/копиры</option>
+                        <option>--Продажа принтеров/копиров</option>
+                        <option>--Принтеры/копиры на запчасти</option>
+                        <option>--Запчасти для принтеров/копиров</option>
+                        <option>----Блоки лазера/сканера/Сканирующие линейки</option>
+                        <option>----Блоки питания</option>
+                        <option>----Блоки проявки</option>
+                    </select>
+                </div>
+                <div class="form-group col-md-2 align-items-end justify-content-end d-flex">
+                    <button class="btn btn-warning btn-lg">Поиск</button>
+                </div>
+            </div>
+            <div class="form-row rowSearchMain">
+                <div class="form-group col-lg-6 d-none d-lg-block">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputCyti" class="col-form-label">Местоположение</label>
+                            <input type="text" class="form-control" id="inputCyti">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="selectType" class="col-form-label">Тип объявления</label>
+                            <select class="form-control" id="selectType">
+                                <option>Любой</option>
+                                <option>Продается</option>
+                                <option>Покупается</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group col-lg-4 d-none d-lg-block">
+                    <div class="form-row">
+                        <div class="form-group col-md-5">
+                            <label for="inputPriceFrom" class="col-form-label">Цена от</label>
+                            <input type="text" class="form-control" id="inputPriceFrom">
+                        </div>
+                        <div class="col-md-2 form-group d-flex align-items-end justify-content-center">
+                            <label class="col-form-label">
+                                <i class="fa fa-arrows-h"></i>
+                            </label>
+                        </div>
+                        <div class="form-group col-md-5">
+                            <label for="inputPriceTo" class="col-form-label">Цена до</label>
+                            <input type="text" class="form-control" id="inputPriceTo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-row rowSearchBottom">
+                <div class="form-group col-6 col-md-6 d-flex justify-content-start">
+                    <a href="#">Очистить поиск</a>
+                </div>
+                <div class="form-group col-6 col-md-6 d-flex justify-content-end">
+                    <a href="#">Показать все</a>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
+<!---->
+<!--Блок объявлений и сервисов-->
+
+
+<!--Подвал сайта-->
+<div class="container-fluid podval">
+    <div class="row justify-content-around">
+        <div class="col-12 text-center priziv">
+            <h2>Начните зарабатывать сейчас</h2>
+            <button class="btn btn-warning">Зарегистрироваться</button>
+            <button class="btn btn-danger">Подать объявление</button>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+            <h5><i class="fa fa-list"></i>Услуги</h5>
+            <p><a href="#">Подать объявление</a></p>
+            <p><a href="#">Горящий запрос</a></p>
+            <p><a href="#">Безопасная сделка</a></p>
+            <p><a href="#">Размещение рекламы</a></p>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+            <h5><i class="fa fa-cogs"></i>Служба поддержки</h5>
+            <p><a href="#">Обратная связь</a></p>
+            <p><a href="#">Сотрудничество</a></p>
+            <p><a href="#">Жалоба на объявление</a></p>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+            <h5><i class="fa fa-info"></i>Информация</h5>
+            <p><a href="#">О компании</a></p>
+            <p><a href="#">Политика безопасности</a></p>
+            <p><a href="#">Условия и соглашения</a></p>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-2 text-center text-lg-left">
+            <h5><i class="fa fa-id-card"></i>Личный кабинет</h5>
+            <p><a href="#">Мои объявления</a></p>
+            <p><a href="#">Мои запросы</a></p>
+            <p><a href="#">Мои сообщения</a></p>
+            <p><a href="#">Избранное</a></p>
+            <p><a href="#">Кошелек</a></p>
+            <p><a href="#">Профиль</a></p>
+        </div>
+        <div class="col-12 podvalCopyright">
+            <hr>
+            <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
+            <h6>Все права защищены. ProdaiZIP©</h6>
+        </div>
+    </div>
+</div>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+<script src="../js/main.js"></script>
 
 </body>
 </html>
+
