Доделываю верхнее меню (страница категории)

--- a/pages/category.html
+++ b/pages/category.html
@@ -91,27 +91,24 @@
 <!--Основной контент сайта-->
 <div class="container">
     <!--Верхнее меню-->
-    <div class="row menuTop">
-        <div class="col-12 text-right">
+    <div class="row">
+        <div class="col-12 text-right menu_top align-middle">
             <a href="#">
                 <img class="logo2" src="../img/logo.png" alt="ProdaiZip.ru">
             </a>
+            <a href="#" class="btn btn-danger">
+                Подать объявление
+            </a>
             <a href="#">
-                <span class="fa-stack fa-1x has-badge" data-count="4">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-bell fa-stack-1x"></i>
-                </span>
+                <img class="profileimg" src="../img/profile-default.png" alt="Профиль">
+            </a>
+            <a href="#" class="btn btn-info">
+                Войти
             </a>
             <a href="#">
                 <span class="fa-stack fa-1x has-badge" data-count="4">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-search fa-stack-1x"></i>
-                </span>
-            </a>
-            <a href="#">
-                <span class="fa-stack fa-1x has-badge" data-count="4">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-list fa-stack-1x"></i>
+                    <i class="fa fa-star fa-stack-1x"></i>
                 </span>
             </a>
             <a href="#">
@@ -123,18 +120,28 @@
             <a href="#">
                 <span class="fa-stack fa-1x has-badge" data-count="4">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-star fa-stack-1x"></i>
+                    <i class="fa fa-list fa-stack-1x"></i>
                 </span>
             </a>
-            <a href="#" class="btn btn-info">
-                Войти
+            <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-search fa-stack-1x"></i>
+                </span>
             </a>
             <a href="#">
-                <img src="../img/profile-default.png" alt="Профиль">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-bell fa-stack-1x"></i>
+                </span>
             </a>
-            <a href="#" class="btn btn-danger">
-                Подать объявление
-            </a>
+
+
+
+
+
+
+
         </div>
     </div>
 <!---->
