--- a/index.html
+++ b/index.html
@@ -91,45 +91,55 @@
 <!--Основной контент сайта-->
     <div class="container">
 <!--Верхнее меню-->
-        <div class="row blockMenuMain">
-            <div class="col-lg-7 col-md-6 d-none d-md-block menus logo">
-                <a href="#"><img src="img/logo.png"></a>
+        <div class="row">
+            <div class="d-none d-md-block col-md-12 text-right menu_top align-items-center">
+                <a href="#">
+                    <img class="logo2" src="../img/logo.png" alt="ProdaiZip.ru">
+                </a>
+                <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-bell fa-stack-1x"></i>
+                </span>
+                </a>
+                <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-search fa-stack-1x"></i>
+                </span>
+                </a>
+                <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-list fa-stack-1x"></i>
+                </span>
+                </a>
+                <a href="#">
+                <span class="fa-stack fa-1x has-badge" data-count="4">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-comment fa-stack-1x"></i>
+                </span>
+                </a>
+                <a href="#" class="notice">
+                <span class="fa-stack fa-1x has-badge" data-count="6">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-star fa-stack-1x"></i>
+                </span>
+                </a>
+                <a href="#" class="btn btn-info">
+                    Войти
+                </a>
+                <a href="#" class="profileimg">
+                    <img src="../img/840px-Elon-musk-850.jpg" alt="Профиль">
+                    <span>
+                    <i class="fa fa-circle"></i>
+                </span>
+                </a>
+                <a href="#" class="btn btn-danger">
+                    Подать объявление
+                </a>
             </div>
-            <div class="col-lg-3 col-md-4 d-none d-md-block menus">
-                <div class="row menus" >
-                    <div class="col-2 offset-2 menus d-flex align-items-center iconNotice">
-                        <a href="#">
-                            <span class="fa-stack fa-1x has-badge" data-count="4">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-bell fa-stack-1x"></i>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-2 menus d-flex align-items-center iconAd">
-                        <a href="#">
-                            <span class="fa-stack fa-1x has-badge" data-count="2">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-list fa-stack-1x"></i>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="col-4 menus d-flex align-items-center justify-content-center loginMenu">
-                        <button class="btn btn-info">Войти</button>
-                    </div>
-                    <div class="col-2 menus d-flex align-items-center justify-content-center profileMenu">
-                        <a href="pages/profile.html">
-                            <img src="img/profile-default_v_1.png">
-                        </a>
-                     </div>
-                 </div>
-             </div>
-             <div class="col-sm-2 d-none d-xl-flex align-items-center menus btnLoginMenu1">
-                 <button class="btn btn-danger">Подать объявление</button>
-             </div>
-             <div class="col-sm-2 d-none d-md-flex align-items-center d-xl-none menus btnLoginMenu2">
-                 <button class="btn btn-danger align-items-center justify-content-center d-flex">Добавить</button>
-             </div>
-         </div>
+        </div>
 <!--Блок поиска-->
         <form>
             <div class="row blockSearchMain">
