Изменил пути на картинки на главной странице

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="d-none d-md-block col-md-12 text-right menu_top align-items-center">
                 <a href="#">
-                    <img class="logo2" src="../img/logo.png" alt="ProdaiZip.ru">
+                    <img class="logo2" src="/img/logo.png" alt="ProdaiZip.ru">
                 </a>
                 <a href="#">
                 <span class="fa-stack fa-1x has-badge" data-count="4">
@@ -130,7 +130,7 @@
                     Войти
                 </a>
                 <a href="#" class="profileimg">
-                    <img src="../img/840px-Elon-musk-850.jpg" alt="Профиль">
+                    <img src="/img/840px-Elon-musk-850.jpg" alt="Профиль">
                     <span>
                     <i class="fa fa-circle"></i>
                 </span>
